--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -27,6 +27,9 @@
                     <input id="username" name="username" type="text" class="validate" minlength="2" maxlength="20"
                         pattern='^[a-zA-Z0-9"]{2,20}$' required>
                     <label for="last_name">Username</label>
+                    <span class="helper-text valign-wrapper">
+                        <span class="material-icons">error_outline</span>Username is case sensitive
+                    </span>
                 </div>
             </div>
             <div class="row">
@@ -34,8 +37,11 @@
                     <input id="password" name="password" type="password" class="validate" minlength="8" maxlength="30"
                         pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$" required>
                     <label for="password">Create Password</label>
-                    <span class="helper-text">Password must have at least 8 characters and include letters, 
-                        numbers and special character: (@ $ ! % * # ? &)</span>
+                    <span class="helper-text valign-wrapper">
+                        <span class="material-icons">error_outline</span>
+                        Password must have at least 8 characters and include letters, 
+                        numbers and special character: (@ $ ! % * # ? &)
+                    </span>
                 </div>
             </div>
             <div class="row">
@@ -43,7 +49,9 @@
                     <input id="conf_password" name="conf_password" type="password" class="validate" minlength="8" maxlength="30"
                         pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$" required>
                     <label for="conf_password">Confirm Password</label>
-                    <span class="helper-text">Passwords must match.</span>
+                    <span class="helper-text valign-wrapper">
+                        <span class="material-icons">error_outline</span>Passwords must match
+                    </span>
                 </div>
             </div>
             <div class="row">
