--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block heading %}
-    <h2 class="blue-txt">Welcome to the Family!</h2>
+<h2 class="blue-txt">Welcome to the Family!</h2>
 {% endblock %}
 
 {% block content %}
@@ -8,7 +8,7 @@
         <form class="col s12 m8 offset-m2 l6 offset-l3 card-panel" method="POST" action="{{ url_for('users.signup') }}">
             <div class="row">
                 <div class="input-field col s12 m6">
-                    <input id="first_name" name="first_name"  type="text" class="validate" minlength="2" maxlength="20"
+                    <input id="first_name" name="first_name" type="text" class="validate" minlength="2" maxlength="20"
                         pattern='^[a-zA-Z0-9]{2,20}$' required>
                     <label for="first_name">First Name</label>
                 </div>
@@ -17,12 +17,14 @@
                         pattern='^[a-zA-Z0-9"]{2,20}$' required>
                     <label for="last_name">Last Name</label>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" name="email" type="email" class="validate" required>
-                        <label for="email">Email</label>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="email" name="email" type="email" class="validate" required>
+                    <label for="email">Email</label>
                 </div>
+            </div>
+            <div class="row">
                 <div class="input-field col s12">
                     <input id="username" name="username" type="text" class="validate" minlength="2" maxlength="20"
                         pattern='^[a-zA-Z0-9"]{2,20}$' required>
@@ -39,15 +41,16 @@
                     <label for="password">Create Password</label>
                     <span class="helper-text valign-wrapper">
                         <span class="material-icons">error_outline</span>
-                        Password must have at least 8 characters and include letters, 
+                        Password must have at least 8 characters and include letters,
                         numbers and special character: (@ $ ! % * # ? &)
                     </span>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="conf_password" name="conf_password" type="password" class="validate" minlength="8" maxlength="30"
-                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$" required>
+                    <input id="conf_password" name="conf_password" type="password" class="validate" minlength="8"
+                        maxlength="30" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$"
+                        required>
                     <label for="conf_password">Confirm Password</label>
                     <span class="helper-text valign-wrapper">
                         <span class="material-icons">error_outline</span>Passwords must match
