--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -7,33 +7,38 @@
     <div class="row">
         <form class="col s12 m8 offset-m2 l6 offset-l3 card-panel" method="POST" action="{{ url_for('users.signup') }}">
             <div class="row">
+                <!-- first name -->
                 <div class="input-field col s12 m6">
                     <input id="first_name" name="first_name" type="text" class="validate" minlength="2" maxlength="20"
                         pattern='^[a-zA-Z0-9]{2,20}$' required>
                     <label for="first_name">First Name</label>
                 </div>
+                <!-- last name -->
                 <div class="input-field col s12 m6">
                     <input id="last_name" name="last_name" type="text" class="validate" minlength="2" maxlength="20"
                         pattern='^[a-zA-Z0-9"]{2,20}$' required>
                     <label for="last_name">Last Name</label>
                 </div>
             </div>
+            <!-- email -->
             <div class="row">
                 <div class="input-field col s12">
                     <input id="email" name="email" type="email" class="validate" required>
                     <label for="email">Email</label>
                 </div>
             </div>
+            <!-- username -->
             <div class="row">
                 <div class="input-field col s12">
                     <input id="username" name="username" type="text" class="validate" minlength="2" maxlength="20"
                         pattern='^[a-zA-Z0-9"]{2,20}$' required>
                     <label for="last_name">Username</label>
                     <span class="helper-text valign-wrapper">
-                        <span class="material-icons">error_outline</span>Username is case sensitive
+                        <span class="material-icons">error_outline</span>Username is case sensitive and must be unique
                     </span>
                 </div>
             </div>
+            <!-- password -->
             <div class="row">
                 <div class="input-field col s12">
                     <input id="password" name="password" type="password" class="validate" minlength="8" maxlength="30"
@@ -42,10 +47,12 @@
                     <span class="helper-text valign-wrapper">
                         <span class="material-icons">error_outline</span>
                         Password must have at least 8 characters and include letters,
-                        numbers and special character: (@ $ ! % * # ? &)
+                        numbers and special character: <br>
+                        (@ $ ! % * # ? &)
                     </span>
                 </div>
             </div>
+            <!-- confirm password -->
             <div class="row">
                 <div class="input-field col s12">
                     <input id="conf_password" name="conf_password" type="password" class="validate" minlength="8"
@@ -57,9 +64,10 @@
                     </span>
                 </div>
             </div>
+            <!-- Join -->
             <div class="row">
                 <div class="col12 center-align">
-                    <button class="btn waves-effect waves-light blue-bg white-txt join-btn" type="submit">Join!</button>
+                    <button class="btn waves-effect waves-light blue-bg white-txt join-btn" type="submit">Join</button>
                 </div>
             </div>
         </form>
