Add logout view and functionality

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,8 +33,17 @@
                             width="32" height="32">
                     </a>
                     <ul class="left registration">
-                        <li><a href="{{ url_for('users.login') }}" aria-label="Link to the Log In page.">Log In</a></li>
-                        <li><a href="{{ url_for('users.signup') }}" aria-label="Link to the Sign Up page.">Sign Up</a></li>
+                        {% if session.user %}
+                            <li class="icon-placeholder">
+                                <a href="{{ url_for('users.profile', username=session['user']) }}" aria-label="Link to the Profile page.">
+                                    <span id="profile-icon" class="material-icons hoverable" aria-hidden="true">person</span>
+                                </a>
+                            </li>
+                            <li><a href="{{ url_for('users.logout') }}" aria-label="Log out.">Log Out</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('users.login') }}" aria-label="Link to the Log In page.">Log In</a></li>
+                            <li><a href="{{ url_for('users.signup') }}" aria-label="Link to the Sign Up page.">Sign Up</a></li>
+                        {% endif %}
                     </ul>
                     <!-- Large screen navbar -->
                     <ul>
