--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -36,7 +36,7 @@
     <div class="row">
         <div class="col s12">
             <p class="form-message center-align">
-                Already part of the Family ? <a href="#">Log In</a>
+                Not part of the Family yet ? <a href="{{ url_for('users.signup') }}">Join Us!</a>
             </p>
         </div>
     </div>
