--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -76,7 +76,7 @@
     <div class="row">
         <div class="col s12">
             <p class="form-message center-align">
-                Already part of the Family ? <a href="#">Log In</a>
+                Already part of the Family ? <a href="{{ url_for('users.login') }}">Log In!</a>
             </p>
         </div>
     </div>
