Add home page and update forms

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,5 @@
 {% endblock %}
 
 {% block content %}
-    {% for user in users %}
-        {{ user.username }} {{ user.email }}
-    {% endfor %}
+    <p>Home page</p>
 {% endblock %}
