--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -16,14 +16,13 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="password" name="password" type="password" class="validate" minlength="8" maxlength="30"
-                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$" required>
+                    <input id="password" name="password" type="password" class="validate" required>
                     <label for="password">Password</label></span>
                 </div>
             </div>
             <div class="row">
                 <div class="col12 center-align">
-                    <button class="btn waves-effect waves-light blue-bg white-txt join-btn" type="submit">
+                    <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">
                         <span class="valign-wrapper">
                             Enter <span class="material-icons">login</span>
                         </span>
