--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -67,7 +67,7 @@
             <!-- Join -->
             <div class="row">
                 <div class="col12 center-align">
-                    <button class="btn waves-effect waves-light blue-bg white-txt join-btn" type="submit">Join</button>
+                    <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">Join</button>
                 </div>
             </div>
         </form>
