--- a/app/templates/update_profile.html
+++ b/app/templates/update_profile.html
@@ -41,12 +41,16 @@
             </div>
             <!-- picture -->
             <div class="row">
-                <div class="input-field col s12">
-                    <input id="profile_picture" name="profile_picture" type="text" class="validate">
-                    <label for="last_name">Picture</label>
-                    <span class="helper-text">
-                        Enter your image url
-                    </span>
+                <div class="file-field input-field col s12">
+                    <div class="btn select-file">
+                        <label" for="profile_picture">Select a picture</label>
+                        <br>
+                        <input id="profile_picture" name="profile_picture" type="file" accept="image/*" class="validate">
+                    </div>
+                    <div class="file-path-wrapper">
+                        <label for="my_picture"></label>
+                        <input id="my_picture" name="my_picture" class="file-path validate" type="text" placeholder="Upload a file">
+                    </div>
                 </div>
             </div>
             <!-- password -->
