--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -11,7 +11,7 @@
             <h3 class="header">{{ user.username }}'s info</h3>
             <div class="card horizontal">
                 <div class="card-image valign-wrapper">
-                    <a class="tooltipped" href="{{ url_for('users.update_picture') }}" aria-label="Change or Add profile picture." data-tooltip="Click to update profile picture">
+                    <a class="tooltipped" href="{{ url_for('users.update_picture', user_id=user._id) }}" aria-label="Change or Add profile picture." data-tooltip="Click to update profile picture">
                         {% if user.profile_picture != None %}
                             <img class="profile-picture" src="{{ user.profile_picture }}" alt="Profile image of {{ user.username }}" height="200" width="200">
                         {% else %}
