--- a/app/templates/update_picture.html
+++ b/app/templates/update_picture.html
@@ -5,17 +5,25 @@
 
 {% block content %}
     <div class="row">
-        <form class="col s12 m8 offset-m2 l6 offset-l3 card-panel" method="POST" 
+        <form class="col s12 m8 offset-m2 l6 offset-l3 card-panel" method="POST" enctype="multipart/form-data" 
             action="{{ url_for('users.update_picture', user_id=user._id) }}">
             <div class="row">
-                <!-- picture -->
+                <!-- picture display -->
+                <div class="row">
+                    <div class="col s12 center-align">
+                        {% if user.profile_picture != None %}
+                            <img class="profile-picture" src="{{ user.profile_picture }}" alt="Profile image of {{ user.username }}" height="200" width="200">
+                        {% else %}
+                            <img class="profile-picture" src="/static/images/default-profile-picture/default-profile-picture.png" alt="Default profile picture representing a smiling sunflower.">
+                        {% endif %}
+                    </div>
+                </div>
+                <!-- upload picture -->
                 <div class="row">
                     <div class="file-field input-field col s12">
                         <div class="btn select-file">
                             <label" for="profile_picture">Select a picture</label>
-                            <br>
-                            <input id="profile_picture" name="profile_picture" type="file" accept=".jpg, .jpeg, .png" 
-                                class="validate">
+                            <input id="profile_picture" name="profile_picture" type="file" accept="image/*" class="validate">
                         </div>
                         <div class="file-path-wrapper">
                             <label for="my_picture"></label>
