--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -11,11 +11,14 @@
             <h3 class="header">{{ user.username }}'s info</h3>
             <div class="card horizontal">
                 <div class="card-image valign-wrapper">
-                    <a class="tooltipped" href="{{ url_for('users.update_picture', user_id=user._id) }}" aria-label="Change or Add profile picture." data-tooltip="Click to update profile picture">
+                    <a class="tooltipped hoverable" href="{{ url_for('users.update_picture', user_id=user._id) }}" 
+                        aria-label="Change or Add profile picture." data-tooltip="Click to update profile picture">
                         {% if user.profile_picture != None %}
-                            <img class="profile-picture" src="{{ user.profile_picture }}" alt="Profile image of {{ user.username }}" height="200" width="200">
+                            <img class="profile-picture" src="data:image/png;base64,{{ user.profile_picture }}" 
+                                alt="Profile image of {{ user.username }}">
                         {% else %}
-                            <img class="profile-picture" src="/static/images/default-profile-picture/default-profile-picture.png" alt="Default profile picture representing a smiling sunflower.">
+                            <img class="profile-picture" src="/static/images/default-profile-picture/default-profile-picture.png" 
+                                alt="Default profile picture representing a smiling sunflower.">
                         {% endif %}
                     </a>
                 </div>
