--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -6,20 +6,21 @@
 {% block content %}
     <div class="row">
         <form class="col s12 m8 offset-m2 l6 offset-l3 card-panel" method="POST" action="{{ url_for('users.login') }}">
+            <!-- email -->
             <div class="row">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" name="email" type="email" class="validate" required>
-                        <label for="email">Email</label>
-                    </div>
+                <div class="input-field col s12">
+                    <input id="email" name="email" type="email" class="validate" required>
+                    <label for="email">Email</label>
                 </div>
             </div>
+            <!-- password -->
             <div class="row">
                 <div class="input-field col s12">
                     <input id="password" name="password" type="password" class="validate" required>
                     <label for="password">Password</label></span>
                 </div>
             </div>
+            <!-- submit -->
             <div class="row">
                 <div class="col12 center-align">
                     <button class="btn waves-effect waves-light blue-bg white-txt submit-btn" type="submit">
