--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,22 +6,28 @@
 
 {% block content %}
 
+    <!-- Profile info -->
     <div class="row">
         <div class="col s12 m7">
             <h3 class="header">{{ user.username }}'s info</h3>
             <div class="card horizontal profile-container">
+                <!-- Profile picture -->
                 <div class="card-image valign-wrapper">
+                    <!-- Change picture -->
                     <a class="tooltipped hoverable" href="{{ url_for('users.update_picture', user_id=user._id) }}" 
                         aria-label="Change or Add profile picture." data-tooltip="Click to update profile picture">
                         {% if user.profile_picture != None %}
+                            <!-- user picture -->
                             <img class="profile-picture" src="data:image/png;base64,{{ user.profile_picture }}" 
                                 alt="Profile image of {{ user.username }}">
                         {% else %}
+                            <!-- default picture -->
                             <img class="profile-picture" src="/static/images/default-profile-picture/default-profile-picture.png" 
                                 alt="Default profile picture representing a smiling sunflower.">
                         {% endif %}
                     </a>
                 </div>
+                <!-- Personal info -->
                 <div class="card-stacked">
                     <div class="card-content">
                         <div class="profile-info-wrapper">
@@ -41,12 +47,24 @@
                             <span class="profile-info">{{ user.email }}</span>
                         </div>
                     </div>
+                    <!-- Update info / Change password -->
                     <div class="card-action">
                         <a href="{{ url_for('users.update_profile', user_id=user._id) }}">Update info</a>
                         <a href="{{ url_for('users.change_password', user_id=user._id) }}">Change password</a>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Delete profile -->
+    <div class="row">
+        <div class="col s12 m7">
+            <a class="btn red-bg cancel-btn delete-profile-btn" href="{{ url_for('users.delete_profile') }}">
+                <span class="valign-wrapper">
+                    Delete Profile <span class="material-icons">delete_forever</span>
+                </span>
+            </a>
         </div>
     </div>
 
