--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -42,11 +42,12 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input id="password" name="password" type="password" class="validate" minlength="8" maxlength="30"
-                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$" required>
+                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$" 
+                        autocomplete="new-password" required>
                     <label for="password">Create Password</label>
                     <span class="helper-text valign-wrapper">
                         <span class="material-icons">error_outline</span>
-                        Password must have at least 8 characters and include letters,
+                        Password must have at least 8 characters, include 1 uppercase and 1 lowercase letter,
                         numbers and special character: <br>
                         (@ $ ! % * # ? &)
                     </span>
@@ -57,7 +58,7 @@
                 <div class="input-field col s12">
                     <input id="conf_password" name="conf_password" type="password" class="validate" minlength="8"
                         maxlength="30" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!#%*?&]{8,30}$"
-                        required>
+                        autocomplete="new-password" required>
                     <label for="conf_password">Confirm Password</label>
                     <span class="helper-text valign-wrapper">
                         <span class="material-icons">error_outline</span>Passwords must match
