Change the info given to the user for password to be more specific

--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -22,7 +22,7 @@
                     <label for="new_password">New Password</label>
                     <span class="helper-text valign-wrapper">
                         <span class="material-icons">error_outline</span>
-                        Password must have at least 8 characters and include letters,
+                        Password must have at least 8 characters, letters (upper and lower-case),
                         numbers and special character: <br>
                         (@ $ ! % * # ? &)
                     </span>
