--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -47,7 +47,7 @@
                     <label for="password">Create Password</label>
                     <span class="helper-text valign-wrapper">
                         <span class="material-icons">error_outline</span>
-                        Password must have at least 8 characters, include 1 uppercase and 1 lowercase letter,
+                        Password must have at least 8 characters, letters (upper and lower-case),
                         numbers and special character: <br>
                         (@ $ ! % * # ? &)
                     </span>
